--- a/style.css
+++ b/style.css
@@ -9,9 +9,36 @@ body {
 }
 
 .pitch-fader {
-    height: 200px; 
+    height: 10px; /* Set the height to make the slider vertical */
+    width: 100%;
     transform: rotate(270deg); /* Rotate the slider vertically */
     margin: 0 20px;
+    appearance: none; /* Remove default styles for range input */
+    background: linear-gradient(to right, #333, #555); /* Add gradient background */
+    border: 1px solid #666; /* Add a border for a realistic look */
+    border-radius: 5px; /* Add some border-radius for rounded corners */
+    cursor: pointer; /* Show pointer cursor on hover */
+}
+
+.pitch-fader::-webkit-slider-thumb {
+    appearance: none; /* Remove default styles for the slider thumb */
+    width: 30px; /* Set the width of the thumb */
+    height: 50px; /* Set the height of the thumb */
+    background-color: #fff; /* Set the color of the thumb */
+    border: 1px solid #666; /* Add a border for a realistic look */
+    border-top: 0; /* Remove top border to create an open rectangle */
+    position: relative;
+}
+
+.pitch-fader::-webkit-slider-thumb::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 2px;
+    background-color: #fff; /* White line color */
+    transform: translate(-50%, -50%); /* Center the line horizontally and vertically */
 }
 
 #leftMetronome, #rightMetronome {
